Last minute updates

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -21,6 +21,11 @@ body {
     width: 90%; 
 }
 
+img {
+    width: 500px;
+    height: 400px;
+}
+
 
 @media (min-width: 576px) {
     .task-holder, .task-input {
